fix: update link on python landing page

--- a/generators/app/templates/basic/python/index.html
+++ b/generators/app/templates/basic/python/index.html
@@ -34,7 +34,7 @@
       <li>
         <div class="right-arrow"></div>
         <div>
-          <a target="_blank" rel="noopener" href="https://datascience.ibm.com/">Learn about IBM’s Data Science Experience</a>
+          <a target="_blank" rel="noopener" href="https://datascience.ibm.com/">Train a model with IBM Watson Studio</a>
         </div>
       </li>
     </ul>
