chore: add placeholder for appid login

--- a/generators/app/templates/basic/node/index.html
+++ b/generators/app/templates/basic/node/index.html
@@ -12,6 +12,7 @@
     <h2>You are currently running a Node.js app built for the IBM Cloud.</h2>
   </header>
   <main>
+    <!-- placeholder appid login -->
     <ul>
       <li>
         <div class="right-arrow"></div>
