--- a/generators/app/templates/angularjs/client/component.html
+++ b/generators/app/templates/angularjs/client/component.html
@@ -9,7 +9,7 @@
             <li>
                 <div class="right-arrow"></div>
                 <div>
-                    <a target="_blank" href="https://console.bluemix.net/developer/appservice/dashboard?env_id=ibm%3Ayp%3Aus-south">Visit IBM Cloud App Service</a>
+                    <a target="_blank" href="https://cloud.ibm.com/developer/appservice/dashboard?env_id=ibm%3Ayp%3Aus-south">Visit IBM Cloud App Service</a>
                 </div>
             </li>
             <li>
